2013-10-04 arjenmarkus@users.sourceforge.net
   * src/dbase/dbasefile.f90: reader for dBase III files
   * test/dbase/test_dbasefile.f90: test program for the reader for dBase III files
   * test/dbase/makefile: corresponding makefile
   * test/dbase/example.dbf: example of a dBase III file

2013-06-30 arjenmarkus@users.sourceforge.net
   * src/computing/traverse_grid.f90: added module for traversing a grid
   * src/computing/enum_space.f90: module and documentation for enumerating points
   * src/dynlib/linux_dynlib.f90: use c_associated()
   * src/dynlib/win_ifort_dynlib.f90: use c_associated()
   * src/dynlib/win_gnu_dynlib.f90: use c_associated() and compiler directives
   * src/dynlib/dynlib.f90: extend the module
   * src/mysql/mysql.f90: small improvements
   * src/odbc/codbc.c: consistent casts and data types
   * src/odbc/fodbc.c: support for blobls added (does not seem to work properly though)


2013-05-13 knystrom@users.sourceforge.net
   * src/reporting/m_exception.f90: negative LUN allowed
   * tests/reporting/test_m_exception.f90: added test case for negative LUN
   * doc/reporting/m_exception.*: corresponding changes in doc
	
2012-12-23 arjenmarkus@users.sourceforge.net
   * src/reporting/m_multilog.f90: added new module provided by Karin Nystrom
   * tests/reporting/test_m_multilog.f90: test program for the new module provided by Karin Nystrom
   * doc/reporting/m_multilog.man: describe the new module
   * tests/reporting/makefile: include the test program for the m_multilog module
   * src/computing/random_permutations.f90: added new module for random permutations
   * tests/computing/test_random_permutations.f90: added test program for random permutations
   * tests/computing/makefile: include the test program for random permutations
   * doc/cgi/fortran-fastcgi-nginx.html: added instructions for using Fast-CGI with Nginx webserver

2012-11-27 arjenmarkus@users.sourceforge.net