@@ -1,4 +1,4 @@
-#!/usr/bin/sh
+#!/bin/sh
 #    Configuration for Flibs: find a suitable compiler and set build options
 #
 if test @$1 = "@-help" -o @$1 = "@-?" ;then
@@ -22,6 +22,7 @@ if test @$1 = "@-help" -o @$1 = "@-?" ;then
 fi
 
 cd config
+makefilecfg='../make/makefile/Makefile-cfg'
 
 #
 # Clean up
@@ -43,8 +44,11 @@ fi
 if test @$1 == "@-optimise" -o @$2 == "@-optimise" ;then
     options=optimise
 fi
-
+#
+# Copy build options
+#
 cp $options.mk options.mk
+sed -i "s|VERSION = .*$|VERSION = $options|g" $makefilecfg
 
 #
 # Identify the compiler
@@ -120,6 +124,10 @@ fi
 if test $found -eq 1 ;then
     echo Compiler: $compiler
     cp $compiler.mk config.mk
+    # Ugly; this is to avoid replacing Makefile-linux/win32-NT
+    sed -i "s|include Makefile-gfortran|include Makefile-$compiler|g" $makefilecfg
+    sed -i "s|include Makefile-g95|include Makefile-$compiler|g" $makefilecfg
+    sed -i "s|include Makefile-ifort|include Makefile-$compiler|g" $makefilecfg
 else
     echo No suitable compiler found!
 fi
