@@ -20,6 +20,7 @@ F90OPTS += -D_PLATFORM_CHDIR_SUBROUTINE
 F90OPTS += -D_VSTRING_POINTER
 F90OPTS += -D_VSTRINGLIST_ALLOCATABLE
 F90OPTS += -D_FS_RENAME_SUBROUTINE
+F90OPTS += -D_FS_GETCWD_SUBROUTINE
 F90OPTS += -D_VFILE_RENAME_SUBROUTINE
 F90OPTS += -D_VFILE_GETCWD_SUBROUTINE
 F77OPTS = $(FOPTS_BASE) -x f77-cpp-input -fbounds-check -Wall -I$(srcdir) -J$(libdir) -I$(libdir)
