@@ -1,30 +1,33 @@
 #
 # Options specific to the fortran compiler
 #
-FC = g95
+FC = ifort
 F90OPTS = $(FOPTS_BASE) 
-F90OPTS += -fstatic 
-F90OPTS += -fzero 
-F90OPTS += -cpp 
-F90OPTS += -ftrace=full 
-F90OPTS += -fmod=$(libdir) 
-F90OPTS += -Wall 
-F90OPTS += -D_PLATFORM_FORTRAN_2003
+F90OPTS += -fpp 
+F90OPTS += -traceback
+F90OPTS += -check bounds
+F90OPTS += -warn unused
+F90OPTS += -warn uncalled
+F90OPTS += -warn interfaces
+F90OPTS += -I$(libdir)
 F90OPTS += -I$(srcdir) 
 F90OPTS += -I../../src/datastructures
 F90OPTS += -I../../tests/support
-F90OPTS += -fbounds-check
+F90OPTS += -D_PLATFORM_FORTRAN_2003
+F90OPTS += -D_PLATFORM_INTEL_FORTRAN_PORTABILITY_ROUTINES
 F90OPTS += -D_PLATFORM_SYSTEM_FUNCTION
 F90OPTS += -D_PLATFORM_CHDIR_FUNCTION
 F90OPTS += -D_PLATFORM_STAT_FUNCTION
 F90OPTS += -D_VSTRING_POINTER
 F90OPTS += -D_VSTRINGLIST_POINTER
+F90OPTS += -D_FS_INTEL_FORTRAN_PORTABILITY_ROUTINES
 F90OPTS += -D_FS_RENAME_FUNCTION
 F90OPTS += -D_FS_GETCWD_FUNCTION
+F90OPTS += -D_VFILE_INTEL_FORTRAN_PORTABILITY_ROUTINES
 F90OPTS += -D_VFILE_RENAME_FUNCTION
 F90OPTS += -D_VFILE_GETCWD_FUNCTION
 F77OPTS = $(F90OPTS)
-LINK = g95
+LINK = ifort
 LOPTS = $(LOPTS_BASE)
 
 ifeq ($(OPERATING_SYSTEM),windows32)
